# SpreadsheetAnalyzer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_CHECK.md  COMPILE_GUIDE.md  DEVELOPER_GUIDE.md  EXCEL_IMPLEMENTATION.md  EXCEL_README.md  EXCEL_SETUP_GUIDE.md  EXCEL_SUPPORT.md  FINAL_SUMMARY.md  LATEST_UPDATE.md  LICENSE  NEW_FEATURES.md  PROJECT_STATUS.md  README.md  USER_GUIDE.md  USER_MANUAL.md  download_openxlsx.sh  test_data.csv  test_sales_data.csv
.claude/: settings.local.json
docs/: EXCEL_SUPPORT_GUIDE.md  毕业设计实施计划.md  毕业设计开题报告.md
resources/styles/: dark.qss  modern.qss
src/: main.cpp
src/core/: CsvLoader.cpp  CsvLoader.h  DataExporter.cpp  DataExporter.h  DataLoader.cpp  DataLoader.h  ExcelExporter.cpp  ExcelExporter.h  ExcelLoader.cpp  ExcelLoader.h  TableData.cpp  TableData.h
src/statistics/: DescriptiveStats.cpp  DescriptiveStats.h  Forecasting.cpp  Forecasting.h  MatrixOperations.cpp  MatrixOperations.h  StatisticTypes.cpp  StatisticTypes.h
src/ui/: CalcColumnDialog.cpp  CalcColumnDialog.h  ChartView.cpp  ChartView.h  DataTableView.cpp  DataTableView.h  FilterDialog.cpp  FilterDialog.h  GroupByDialog.cpp  GroupByDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  StatisticsDialog.cpp  StatisticsDialog.h
src/utils/: ThemeManager.cpp  ThemeManager.h
src/visualization/: ChartHelper.cpp  ChartHelper.h  ChartTypes.h  ColorThemeManager.cpp  ColorThemeManager.h
